# gnina

./: CMakeLists.txt
caffe/: CMakeLists.txt
caffe/cmake/: Dependencies.cmake
caffe/include/caffe/: common.hpp  parallel.hpp  syncedmem.hpp
caffe/include/caffe/layers/: cudnn_conv_layer.hpp  cudnn_deconv_layer.hpp
caffe/include/caffe/util/: benchmark.hpp  device_alternate.hpp  math_functions.hpp
caffe/python/: CMakeLists.txt
caffe/src/caffe/: common.cpp  internal_thread.cpp  parallel.cpp  syncedmem.cpp
caffe/src/caffe/layers/: accuracy_layer.hip.cpp  base_data_layer.cpp  batch_reindex_layer.hip.cpp  bias_layer.hip.cpp  bnll_layer.hip.cpp  concat_layer.hip.cpp  contrastive_loss_layer.hip.cpp  crop_layer.hip.cpp  cudnn_conv_layer.cpp  cudnn_conv_layer.hip.cpp  cudnn_deconv_layer.cpp  cudnn_deconv_layer.hip.cpp  cudnn_lcn_layer.cpp  cudnn_lrn_layer.hip.cpp  cudnn_pooling_layer.hip.cpp  cudnn_relu_layer.hip.cpp  cudnn_sigmoid_layer.hip.cpp  cudnn_softmax_layer.hip.cpp  cudnn_tanh_layer.hip.cpp  dropout_layer.hip.cpp  eltwise_layer.hip.cpp  elu_layer.hip.cpp  embed_layer.hip.cpp  lrn_layer.hip.cpp  lstm_data_getter.hip.cpp  lstm_unit_layer.hip.cpp  molgrid_data_layer.cpp  pooling_layer.hip.cpp  prelu_layer.hip.cpp  relu_layer.hip.cpp  scale_layer.hip.cpp  sigmoid_cross_entropy_loss_layer.hip.cpp  sigmoid_layer.hip.cpp  slice_layer.hip.cpp  softmax_layer.hip.cpp  softmax_loss_layer.hip.cpp  swish_layer.hip.cpp  tanh_layer.hip.cpp  threshold_layer.hip.cpp  tile_layer.hip.cpp  (+1 more)
caffe/src/caffe/solvers/: adadelta_solver.hip.cpp  adagrad_solver.hip.cpp  adam_solver.hip.cpp  nesterov_solver.hip.cpp  rmsprop_solver.hip.cpp  sgd_solver.hip.cpp
caffe/src/caffe/test/: test_caffe_main.cpp  test_common.cpp  test_gradient_based_solver.cpp  test_im2col_kernel.hip.cpp  test_inner_product_layer.cpp  test_platform.cpp  test_util_blas.cpp
caffe/src/caffe/util/: benchmark.cpp  im2col.hip.cpp  math_functions.cpp  math_functions.hip.cpp
caffe/src/gtest/: gtest.h
caffe/tools/: CMakeLists.txt  caffe.cpp
gninasrc/: CMakeLists.txt
gninasrc/lib/: bfgs.h  bfgs.hip.cpp  cache_gpu.cpp  cnn_scorer.cpp  common.h  conf_gpu.hip.cpp  device_buffer.cpp  device_buffer.h  gpu_debug.h  gpu_math.h  gpu_util.h  gpucode.h  gpucode.hip.cpp  matrix.h  model.hip.cpp  non_cache_gpu.hip.cpp  parallel_mc.cpp  precalculate_gpu.hip.cpp  quaternion.cu.cpp  quaternion.h  tree_gpu.h  tree_gpu.hip.cpp  triangular_matrix_index.h
gninasrc/main/: main.cpp
